[tool.poetry]
name = "thub-dev"
version = "0.0.0"
description = ""
authors = ["chankoo"]

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.8.8"
llama-hub = "^0.0.25"
openai = "^0.27.9"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
span-marker = "^1.3.0"
nltk = "^3.8.1"
pypdf = "^3.15.2"
pdfminer-six = "^20221105"
